[package]
name = "wthr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = {serde = "1.0.188", features = ["derive"]}
serde_json = "1.0.89"
geolocation = "0.2.1"
chrono = "0.4.31"
prettytable-rs = "0.6.5"
